--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
     "name": "remodal",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "homepage": "http://vodkabears.github.io/remodal/",
     "authors": [
-        "Zeno Rocha <hi@zenorocha.com>"
+        "Ilya Makarov <dfrost.00@gmail.com>"
     ],
     "description": "Flat, responsive, lightweight, easy customizable modal window plugin with declarative state notation and hash tracking.",
     "main": [ "dist/jquery.remodal.js", "dist/jquery.remodal.min.js", "dist/jquery.remodal.css"],
