--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "Remodal",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-jshint": "~0.10.0"
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-concat": "~0.5.0"
   }
 }
