--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "Remodal",
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-concat": "~0.5.0"
-  }
+    "name": "Remodal",
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-contrib-uglify": "~0.3.2",
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-contrib-concat": "~0.5.0"
+    },
+    "scripts": {
+        "test": "grunt test"
+    }
 }
