--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-qunit": "~0.5.2",
-    "grunt-contrib-connect": "~0.8.0"
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-cli": "~0.1.13"
   },
   "scripts": {
     "test": "grunt test"
