Add new keywords to the bower.json

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "keywords": [
         "jquery",
         "plugin",
+        "jquery-plugin",
         "flat",
         "responsive",
         "modal",
