--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-qunit": "~0.5.2",
     "grunt-contrib-uglify": "~0.3.2",
-    "grunt-csscomb": "^3.0.0"
+    "grunt-csscomb": "^3.0.0",
+    "grunt-jscs": "^0.8.1"
   },
   "scripts": {
     "test": "grunt test"
