--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-qunit": "~0.5.2",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-csscomb": "^3.0.0",
+    "grunt-githooks": "^0.3.1",
     "grunt-jscs": "^0.8.1"
   },
   "scripts": {
