--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,38 @@
 {
-    "name": "remodal",
-    "version": "0.2.1",
-    "homepage": "http://vodkabears.github.io/remodal/",
-    "authors": [
-        "Ilya Makarov <dfrost.00@gmail.com>"
-    ],
-    "description": "Flat, responsive, lightweight, easy customizable modal window plugin with declarative state notation and hash tracking.",
-    "main": [ "dist/jquery.remodal.js", "dist/jquery.remodal.css" ],
-    "keywords": [
-        "jquery",
-        "plugin",
-        "jquery-plugin",
-        "flat",
-        "responsive",
-        "modal",
-        "popup",
-        "window",
-        "dialog",
-        "popin",
-        "lightbox",
-        "ui",
-        "zepto"
-    ],
-    "license": "MIT"
+  "name": "remodal",
+  "version": "0.2.1",
+  "homepage": "http://vodkabears.github.io/remodal/",
+  "authors": [
+    "Ilya Makarov <dfrost.00@gmail.com>"
+  ],
+  "description": "Flat, responsive, lightweight, easy customizable modal window plugin with declarative state notation and hash tracking.",
+  "main": [
+    "dist/jquery.remodal.js",
+    "dist/jquery.remodal.css"
+  ],
+  "keywords": [
+    "jquery",
+    "plugin",
+    "jquery-plugin",
+    "flat",
+    "responsive",
+    "modal",
+    "popup",
+    "window",
+    "dialog",
+    "popin",
+    "lightbox",
+    "ui",
+    "zepto"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "jquery": "*"
+  },
+  "devDependencies": {
+    "qunit": "~1.15.0",
+    "jquery": "jquery#^1.11.1",
+    "jquery2": "jquery#^2.1.1",
+    "zepto": "~1.1.4"
+  }
 }
