Add 'ignore' section to the bower.json

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,17 @@
     "dist/jquery.remodal.js",
     "dist/jquery.remodal.css"
   ],
+  "ignore": [
+    "**/.*",
+    "examples/",
+    "libs/",
+    "src/",
+    "test/",
+    "*.md",
+    "Gruntfile.js",
+    "package.json",
+    "remodal.jquery.json"
+  ],
   "keywords": [
     "jquery",
     "plugin",
