--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-qunit": "^0.5.2",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-csscomb": "^3.0.0",
     "grunt-githooks": "^0.3.1",
-    "grunt-jscs": "^1.0.0"
+    "grunt-jscs": "^1.2.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install && ./node_modules/.bin/grunt githooks",
+    "postinstall": "./node_modules/.bin/bower install; ./node_modules/.bin/grunt githooks",
     "test": "./node_modules/.bin/grunt test"
   }
 }
