--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-qunit": "^0.5.2",
-    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-csscomb": "^3.0.0",
     "grunt-githooks": "^0.3.1",
-    "grunt-jscs": "1.2.0"
+    "grunt-jscs": "^1.5.0"
   },
   "scripts": {
     "postinstall": "./node_modules/.bin/bower install; ./node_modules/.bin/grunt githooks",
