--- a/package.json
+++ b/package.json
@@ -1,6 +1,36 @@
 {
-  "private": true,
-  "name": "Remodal",
+  "name": "remodal",
+  "version": "0.6.1",
+  "description": "Flat, responsive, lightweight, easy customizable modal window plugin with declarative state notation and hash tracking.",
+  "keywords": [
+    "jquery-plugin",
+    "jquery",
+    "plugin",
+    "flat",
+    "responsive",
+    "modal",
+    "popup",
+    "window",
+    "dialog",
+    "popin",
+    "lightbox",
+    "ui",
+    "zepto"
+  ],
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/VodkaBears/Remodal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/VodkaBears/Remodal/issues"
+  },
+  "author": {
+    "name": "Ilya Makarov",
+    "email": "dfrost.00@gmail.com",
+    "url": "https://github.com/VodkaBears"
+  },
+  "homepage": "http://vodkabears.github.io/remodal/",
+  "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
