--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "ui",
     "zepto"
   ],
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/VodkaBears/Remodal.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VodkaBears/Remodal.git"
   },
   "bugs": {
     "url": "https://github.com/VodkaBears/Remodal/issues"
@@ -31,11 +31,14 @@
   },
   "homepage": "http://vodkabears.github.io/remodal/",
   "license": "MIT",
+  "dependencies": {
+    "jquery": "*"
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-qunit": "^0.5.2",
