--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "http://vodkabears.github.io/remodal/",
   "license": "MIT",
+  "main": "dist/jquery.remodal.js",
   "dependencies": {
     "jquery": "*"
   },
