--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "grunt-jscs": "^1.5.0"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/bower install; ./node_modules/.bin/grunt githooks",
+    "start": "npm install && ./node_modules/.bin/bower install && ./node_modules/.bin/grunt githooks",
     "test": "./node_modules/.bin/grunt test"
   }
 }
