--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-contrib-qunit": "^0.7.0",
     "grunt-contrib-uglify": "^0.8.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.0.0",
     "grunt-githooks": "^0.3.1",
     "grunt-jscs": "^1.6.0"
