--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bower": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.0",
+    "grunt-browser-sync": "^2.1.2",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.10.1",
