--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remodal",
   "version": "0.6.4",
-  "description": "Flat, responsive, lightweight, easy customizable modal window plugin with declarative state notation and hash tracking.",
+  "description": "Responsive, lightweight, fast, fully customizable modal window plugin with declarative configuration and hash tracking.",
   "keywords": [
     "jquery-plugin",
     "jquery",
