--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Ilya Makarov <dfrost.00@gmail.com>"
   ],
-  "description": "Responsive, lightweight, fast, fully customizable modal window plugin with declarative configuration and hash tracking.",
+  "description": "Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.",
   "main": [
     "dist/remodal.js",
     "dist/remodal.css",
@@ -34,7 +34,9 @@
     "popin",
     "lightbox",
     "ui",
-    "zepto"
+    "zepto",
+    "synchronized",
+    "animations"
   ],
   "license": "MIT",
   "dependencies": {
