--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "remodal",
   "version": "0.6.4",
-  "description": "Responsive, lightweight, fast, fully customizable modal window plugin with declarative configuration and hash tracking.",
+  "description": "Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative configuration and hash tracking.",
   "keywords": [
     "jquery-plugin",
     "jquery",
@@ -15,7 +15,9 @@
     "popin",
     "lightbox",
     "ui",
-    "zepto"
+    "zepto",
+    "synchronized",
+    "animations"
   ],
   "repository": {
     "type": "git",
